Adicionado mocha e testes iniciais

--- a/app/config.json
+++ b/app/config.json
@@ -1,1 +1,1 @@
-[{"dirEntrada":"1","dirSaida":"1","extensoes":[""]},{"dirEntrada":"2","dirSaida":"2","extensoes":[".html"]}]
+[{"dirEntrada":"C:\\Users\\guilherme.taschetto\\Desktop\\testeGit\\teste","dirSaida":"C:\\Users\\guilherme.taschetto\\Desktop\\testeGit\\testeBkp","extensoes":[".p"]}]
